--- a/packages/mcp-init/package.json
+++ b/packages/mcp-init/package.json
@@ -21,7 +21,8 @@
   "bin": "./dist/index.js",
   "scripts": {
     "build": "tsup src/index.ts --dts --clean",
-    "build:watch": "tsup src/index.ts --dts --watch"
+    "build:watch": "tsup src/index.ts --dts --watch",
+    "test": "jest"
   },
   "dependencies": {
     "chalk": "^4.1.2",
@@ -31,8 +32,11 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.11.28",
     "@types/validate-npm-package-name": "^4.0.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.1",
     "tsup": "^8.4.0",
     "typescript": "^5.4.2"
   }
