--- a/packages/mcp-init/tsconfig.json
+++ b/packages/mcp-init/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "module": "Node16",
     "moduleResolution": "Node16",
+    "esModuleInterop": true,
+    "isolatedModules": true,
     "outDir": "./dist",
     "rootDir": "./src"
   },
