--- a/packages/mcpi-template-default/package.json
+++ b/packages/mcpi-template-default/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.13",
-    "mcp-scripts": "file:../mcp-scripts",
+    "mcp-scripts": "0.1.1",
     "typescript": "^5.8.2"
   }
 }
