Pull MCP server name and version from package.json, fix jest test, update READMEs and descriptions

--- a/packages/mcp-init/package.json
+++ b/packages/mcp-init/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mcp-init",
   "version": "0.1.2",
-  "description": "Create a new MCP server with one command - batteries included.",
+  "description": "Create a new MCP server, batteries included.",
   "author": "stephencme",
   "license": "UNLICENSED",
   "repository": {
