--- a/packages/mcpi-template-default/package.json
+++ b/packages/mcpi-template-default/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcpi-template-default",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "Default project template for mcp-init.",
   "author": "stephencme",
   "license": "MIT",
@@ -11,9 +11,10 @@
   },
   "bin": "./dist/index.js",
   "scripts": {
-    "start": "mcp-scripts start",
+    "dev": "mcp-scripts dev",
     "build": "mcp-scripts build",
-    "setup": "mcp-scripts setup"
+    "setup": "mcp-scripts setup",
+    "eject": "mcp-scripts eject"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.8.0",
@@ -21,7 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.13",
-    "mcp-scripts": "0.1.3",
+    "mcp-scripts": "^0.2.0",
     "typescript": "^5.8.2"
   }
 }
