--- a/packages/mcpi-template-default/tsconfig.json
+++ b/packages/mcpi-template-default/tsconfig.json
@@ -7,6 +7,6 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "exclude": ["node_modules", "dist", "**/*.test.ts"],
+  "exclude": ["node_modules", "dist"],
   "include": ["src/**/*", "package.json"]
 }
