--- a/packages/mcp-scripts/package.json
+++ b/packages/mcp-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcp-scripts",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "The build tools that powermcp-init projects",
   "author": "stephencme",
   "license": "MIT",
@@ -11,7 +11,7 @@
   },
   "bin": "./dist/index.js",
   "scripts": {
-    "build": "tsup src/index.ts src/setup.ts --dts --clean"
+    "build": "tsup src/index.ts src/setup.ts src/eject.js --dts --clean"
   },
   "dependencies": {
     "@types/node": "^22.13.13",
