--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "npm install && npm run build -ws",
-    "version:major": "npm run build && npm version major -ws",
-    "version:minor": "npm run build && npm version minor -ws",
-    "version:patch": "npm run build && npm version patch -ws",
+    "build": "npm run build -ws",
+    "version": "npm version -ws",
+    "version:major": "npm run version major",
+    "version:minor": "npm run version minor",
+    "version:patch": "npm run version patch",
     "postversion": "node scripts/updateTemplatesDeps.cjs",
-    "publish": "npm run build && npm publish -ws"
+    "publish": "npm publish -ws"
   },
   "devDependencies": {
     "glob": "^11.0.1"
