Fix mcp-script to properly remove eject command, bump to 0.2.2

--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   ],
   "scripts": {
     "build": "npm run build -ws",
-    "version": "npm version -ws",
     "version:major": "npm run version major",
     "version:minor": "npm run version minor",
     "version:patch": "npm run version patch",
+    "version": "npm version -ws",
     "postversion": "node scripts/updateTemplatesDeps.cjs",
-    "publish": "npm publish -ws"
+    "publish": "npm publish -ws",
+    "release:major": "npm run build && npm run version:major && npm run publish",
+    "release:minor": "npm run build && npm run version:minor && npm run publish",
+    "release:patch": "npm run build && npm run version:patch && npm run publish"
   },
   "devDependencies": {
     "glob": "^11.0.1"
