Add gitignore copying for template, add npmignore, switch to ESM

--- a/packages/create-mcp-ts/package.json
+++ b/packages/create-mcp-ts/package.json
@@ -18,6 +18,7 @@
     "cli",
     "generator"
   ],
+  "type": "module",
   "bin": "./dist/index.js",
   "scripts": {
     "build": "tsup src/index.ts --dts --clean",
